--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/29 13:40:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.dd(java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5023bb8b]">dd</td> 
-  <td>main@756936249</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/29 13:40:03</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.dd(java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5023bb8b]">dd</td> 
-  <td>main@756936249</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/29 13:40:03</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.dd(java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5023bb8b]">dd</td> 
-  <td>main@756936249</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/29 13:40:03</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.dd(java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5023bb8b]">dd</td> 
-  <td>main@756936249</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/29 13:40:03</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.dd(java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5023bb8b]">dd</td> 
-  <td>main@756936249</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/29 13:40:03</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationSkills.dd(java.lang.String, java.lang.String)[pri:0, instance:com.maven.testng.VerifyQualificationSkills@5023bb8b]">dd</td> 
-  <td>main@756936249</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>21/09/04 17:22:13</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BackgroundWorker.getURL()[pri:0, instance:com.maven.testng.tests.UserManagementUserSearchTest@ff684e1]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1368862151</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/04 17:22:18</td>   <td>4725</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserManagementUserSearchTest.verifyUserManagementSearch()[pri:0, instance:com.maven.testng.tests.UserManagementUserSearchTest@ff684e1]">verifyUserManagementSearch</td> 
+  <td>main@1368862151</td>   <td></td> </tr>
 </table>
