--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/08/29 12:14:01</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@1cdc4c27]">&lt;&lt;closeBrowser</td> 
+<tr bgcolor="d5878c">  <td>21/09/04 17:29:58</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BackgroundWorker.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@1cdc4c27]">&lt;&lt;closeBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@38603201</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/29 12:13:46</td>   <td>-15010</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@1cdc4c27]">&gt;&gt;getURL</td> 
+<tr bgcolor="d5878c">  <td>21/09/04 17:29:42</td>   <td>-16253</td> <td>&nbsp;</td><td title="&gt;&gt;BackgroundWorker.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@1cdc4c27]">&gt;&gt;getURL</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@38603201</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/29 12:13:52</td>   <td>-9534</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@1cdc4c27]">verifyLoginErrorMessage</td> 
+<tr bgcolor="b46fba">  <td>21/09/04 17:29:46</td>   <td>-11731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@1cdc4c27]">verifyLoginErrorMessage</td> 
   <td>main@38603201</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/29 12:13:53</td>   <td>-8149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@1cdc4c27]">verifyLoginWithCorrectCredentials</td> 
+<tr bgcolor="b46fba">  <td>21/09/04 17:29:48</td>   <td>-9968</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@1cdc4c27]">verifyLoginWithCorrectCredentials</td> 
   <td>main@38603201</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/29 12:13:59</td>   <td>-2729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserManagementUserSearchTest.verifyUserManagementSearch()[pri:0, instance:com.maven.testng.tests.UserManagementUserSearchTest@77b14724]">verifyUserManagementSearch</td> 
+<tr bgcolor="658a60">  <td>21/09/04 17:29:53</td>   <td>-4681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserManagementUserSearchTest.verifyUserManagementSearch()[pri:0, instance:com.maven.testng.tests.UserManagementUserSearchTest@77b14724]">verifyUserManagementSearch</td> 
   <td>main@38603201</td>   <td></td> </tr>
 </table>
