--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67a8a9">  <td>21/09/05 12:46:08</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BackgroundWorker.closeBrowser()[pri:0, instance:com.maven.testng.tests.UserManagementUserSearchTest@663411de]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@544386226</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>21/09/05 12:46:04</td>   <td>-4552</td> <td>&nbsp;</td><td title="&gt;&gt;BackgroundWorker.getURL()[pri:0, instance:com.maven.testng.tests.UserManagementUserSearchTest@663411de]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@544386226</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/09/05 12:46:08</td>   <td>-245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserManagementUserSearchTest.verifyuserCanSearchAllUsersByUsername()[pri:1, instance:com.maven.testng.tests.UserManagementUserSearchTest@663411de]">verifyuserCanSearchAllUsersByUsername</td> 
-  <td>main@544386226</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/09/05 12:46:08</td>   <td>-31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserManagementUserSearchTest.verifyuserCanSearchESSUsersByUsername()[pri:2, instance:com.maven.testng.tests.UserManagementUserSearchTest@663411de]">verifyuserCanSearchESSUsersByUsername</td> 
-  <td>main@544386226</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/19 10:02:59</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@69653e16]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2091072548</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>21/09/19 10:02:42</td>   <td>-16728</td> <td>&nbsp;</td><td title="&gt;&gt;BackgroundWorker.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@69653e16]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2091072548</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/19 10:02:52</td>   <td>-7147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@69653e16]">verifyLoginErrorMessage</td> 
+  <td>main@2091072548</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/19 10:02:53</td>   <td>-5511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@69653e16]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@2091072548</td>   <td></td> </tr>
 </table>
