--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -27,27 +27,9 @@
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>com.maven.testng.tests.UserManagementAddUser</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
 <td>&nbsp;</td>
-<td>testAddNewAdminUser</td>
+<td>endSession</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
