--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67a8a9">  <td>21/09/19 10:01:21</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;BackgroundWorker.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@49d3c823]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/09/19 10:01:21</td>   <td>-110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.endSession()[pri:0, instance:com.maven.testng.VerifyLoginTest@49d3c823]">&lt;&lt;endSession</td> 
-<td>&nbsp;</td>  <td>main@1631227617</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/09/19 10:01:21</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.endSession()[pri:0, instance:com.maven.testng.VerifyLoginTest@49d3c823]">&lt;&lt;endSession</td> 
-<td>&nbsp;</td>  <td>main@1631227617</td>   <td></td> </tr>
-<tr bgcolor="67a8a9">  <td>21/09/19 10:01:10</td>   <td>-10964</td> <td>&nbsp;</td><td title="&gt;&gt;BackgroundWorker.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@49d3c823]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1631227617</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/09/19 10:01:19</td>   <td>-1748</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@49d3c823]">verifyLoginErrorMessage</td> 
-  <td>main@1631227617</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/09/19 10:01:21</td>   <td>-52</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@49d3c823]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@1631227617</td>   <td></td> </tr>
+<tr bgcolor="67a8a9">  <td>21/09/19 11:54:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BackgroundWorker.getURL()[pri:0, instance:com.maven.testng.tests.UserManagementAddUser@68be8808]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1111897955</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/19 11:55:08</td>   <td>11060</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserManagementAddUser.testAddNewAdminUser()[pri:1, instance:com.maven.testng.tests.UserManagementAddUser@68be8808]">testAddNewAdminUser</td> 
+  <td>main@1111897955</td>   <td></td> </tr>
 </table>
