--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="67a8a9">  <td>21/09/19 13:03:40</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BackgroundWorker.getURL()[pri:0, instance:com.maven.testng.page.LoginPage@56f0cc85]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1733022752</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/09/19 13:03:54</td>   <td>14197</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPage.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.page.LoginPage@56f0cc85]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@1733022752</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/19 18:35:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.aaa()[pri:0, instance:com.maven.testng.tests.LoginTest@124c278f]">aaa</td> 
+  <td>main@24119573</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/19 18:36:04</td>   <td>8165</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closes()[pri:0, instance:com.maven.testng.tests.LoginTest@124c278f]">&lt;&lt;closes</td> 
+<td>&nbsp;</td>  <td>main@24119573</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/19 18:36:09</td>   <td>12992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.closes()[pri:0, instance:com.maven.testng.tests.LoginTest@124c278f]">&lt;&lt;closes</td> 
+<td>&nbsp;</td>  <td>main@24119573</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/09/19 18:36:04</td>   <td>8167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.sss()[pri:0, instance:com.maven.testng.tests.LoginTest@124c278f]">sss</td> 
+  <td>main@24119573</td>   <td></td> </tr>
 </table>
